--- a/.github/workflows/docker-ci-cd.yml
+++ b/.github/workflows/docker-ci-cd.yml
@@ -1,4 +1,4 @@
-name: CI/CD Docker
+name: CI/CD Docker (Multi Images)
 
 on:
   push:
@@ -18,8 +18,16 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Build Docker image
-      run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/myapp:latest .
+    # Build & Push Backend
+    - name: Build backend image
+      run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/backend:latest ./backend
 
-    - name: Push Docker image
-      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/myapp:latest
+    - name: Push backend image
+      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/backend:latest
+
+    # Build & Push Frontend
+    - name: Build frontend image
+      run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/frontend:latest ./frontend
+
+    - name: Push frontend image
+      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/frontend:latest
