--- a/.github/workflows/docker-ci-cd.yml
+++ b/.github/workflows/docker-ci-cd.yml
@@ -1,37 +1,46 @@
-name: CI/CD Docker
+name: Docker CI/CD
 
 on:
   push:
-    branches: ["main"]
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+      # Login ke Docker Hub menggunakan secret
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    # ===========================
-    # Build & Push Backend
-    # ===========================
-    - name: Build backend image
-      run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/backend:latest ./backend
+      # Backend (folder: be)
+      - name: Build backend image
+        run: |
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/be:latest ./be
 
-    - name: Push backend image
-      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/backend:latest
+      - name: Push backend image
+        run: |
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/be:latest
 
-    # ===========================
-    # Build & Push Frontend
-    # ===========================
-    - name: Build frontend image
-      run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/frontend:latest ./frontend
+      # Frontend (folder: fe)
+      - name: Build frontend image
+        run: |
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/fe:latest ./fe
 
-    - name: Push frontend image
-      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/frontend:latest
+      - name: Push frontend image
+        run: |
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/fe:latest
+
+      # Logout (opsional)
+      # - name: Logout Docker Hub
+      #   run: docker logout
