--- a/.github/workflows/docker-ci-cd.yml
+++ b/.github/workflows/docker-ci-cd.yml
@@ -4,9 +4,6 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
   build-and-push:
@@ -16,31 +13,35 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Login ke Docker Hub menggunakan secret
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # Backend (folder: be)
-      - name: Build backend image
+      # Backend
+      - name: Build backend
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/be:latest ./be
+          docker buildx build --platform linux/amd64 \
+            -t ${{ secrets.DOCKERHUB_USERNAME }}/be:latest \
+            ./be \
+            --load
 
-      - name: Push backend image
+      - name: Push backend
         run: |
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/be:latest
 
-      # Frontend (folder: fe)
-      - name: Build frontend image
+      # Frontend
+      - name: Build frontend
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/fe:latest ./fe
+          docker buildx build --platform linux/amd64 \
+            -t ${{ secrets.DOCKERHUB_USERNAME }}/fe:latest \
+            ./fe \
+            --load
 
-      - name: Push frontend image
+      - name: Push frontend
         run: |
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/fe:latest
-
-      # Logout (opsional)
-      # - name: Logout Docker Hub
-      #   run: docker logout
