--- a/.github/workflows/docker-ci-cd.yml
+++ b/.github/workflows/docker-ci-cd.yml
@@ -13,35 +13,20 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # Backend
       - name: Build backend
-        run: |
-          docker buildx build --platform linux/amd64 \
-            -t ${{ secrets.DOCKERHUB_USERNAME }}/be:latest \
-            ./be \
-            --load
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/be:latest ./be
 
       - name: Push backend
-        run: |
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/be:latest
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/be:latest
 
-      # Frontend
       - name: Build frontend
-        run: |
-          docker buildx build --platform linux/amd64 \
-            -t ${{ secrets.DOCKERHUB_USERNAME }}/fe:latest \
-            ./fe \
-            --load
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/fe:latest ./fe
 
       - name: Push frontend
-        run: |
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/fe:latest
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/fe:latest
