--- a/.github/workflows/docker-ci-cd.yml
+++ b/.github/workflows/docker-ci-cd.yml
@@ -8,25 +8,30 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-
+    
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build backend
-        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/be:latest ./be
-
-      - name: Push backend
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/be:latest
-
-      - name: Build frontend
-        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/fe:latest ./fe
-
-      - name: Push frontend
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/fe:latest
+      
+      - name: Build and push backend
+        uses: docker/build-push-action@v5
+        with:
+          context: ./be
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/be:latest
+      
+      - name: Build and push frontend
+        uses: docker/build-push-action@v5
+        with:
+          context: ./fe
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/fe:latest
