--- a/.github/workflows/docker-ci-cd.yml
+++ b/.github/workflows/docker-ci-cd.yml
@@ -23,15 +23,13 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       
       - name: Build and push backend
-        uses: docker/build-push-action@v5
-        with:
-          context: ./be
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/be:latest
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+        run: |
+          docker buildx build --platform linux/amd64 --push -t ${DOCKER_USERNAME}/be:latest ./be
       
       - name: Build and push frontend
-        uses: docker/build-push-action@v5
-        with:
-          context: ./fe
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/fe:latest
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+        run: |
+          docker buildx build --platform linux/amd64 --push -t ${DOCKER_USERNAME}/fe:latest ./fe
