--- a/.github/workflows/docker-ci-cd.yml
+++ b/.github/workflows/docker-ci-cd.yml
@@ -1,39 +1,64 @@
-name: Docker CI/CD
+name: Docker CI/CD Pipeline
 
 on:
   push:
     branches:
       - main
+      - master
+  pull_request:
+    branches:
+      - main
+      - master
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
     
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-      
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      
+      # Checkout code dari repository
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      # Login ke Docker Hub
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
-      - name: Build and push backend
+
+      # Setup Docker Buildx (untuk build multi-platform jika diperlukan)
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      # Build dan Push Backend Image
+      - name: Build and Push Backend Image
         uses: docker/build-push-action@v5
         with:
           context: ./be
-          platforms: linux/amd64
+          file: ./be/Dockerfile
           push: true
-          tags: royjannessimbolon/be:latest
-      
-      - name: Build and push frontend
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/backend-express:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/backend-express:${{ github.sha }}
+          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/backend-express:buildcache
+          cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/backend-express:buildcache,mode=max
+
+      # Build dan Push Frontend Image
+      - name: Build and Push Frontend Image
         uses: docker/build-push-action@v5
         with:
           context: ./fe
-          platforms: linux/amd64
+          file: ./fe/Dockerfile
           push: true
-          tags: royjannessimbolon/fe:latest
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/frontend-vite:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/frontend-vite:${{ github.sha }}
+          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/frontend-vite:buildcache
+          cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/frontend-vite:buildcache,mode=max
+
+      # Output image tags
+      - name: Image digest
+        run: |
+          echo "Backend Image: ${{ secrets.DOCKERHUB_USERNAME }}/backend-express:latest"
+          echo "Frontend Image: ${{ secrets.DOCKERHUB_USERNAME }}/frontend-vite:latest"
+          echo "Build SHA: ${{ github.sha }}"
