--- a/.github/workflows/k8s-cicd.yml
+++ b/.github/workflows/k8s-cicd.yml
@@ -11,10 +11,16 @@ env:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    outputs:
+      sha: ${{ steps.vars.outputs.sha }}
     
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Set variables
+        id: vars
+        run: echo "sha=$(echo ${{ github.sha }} | cut -c1-7)" >> $GITHUB_OUTPUT
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -33,7 +39,7 @@ jobs:
           push: true
           tags: |
             ${{ env.DOCKER_USERNAME }}/backend-express:latest
-            ${{ env.DOCKER_USERNAME }}/backend-express:${{ github.sha }}
+            ${{ env.DOCKER_USERNAME }}/backend-express:${{ steps.vars.outputs.sha }}
 
       - name: Build and Push Frontend Image
         uses: docker/build-push-action@v5
@@ -43,29 +49,36 @@ jobs:
           push: true
           tags: |
             ${{ env.DOCKER_USERNAME }}/frontend-vite:latest
-            ${{ env.DOCKER_USERNAME }}/frontend-vite:${{ github.sha }}
+            ${{ env.DOCKER_USERNAME }}/frontend-vite:${{ steps.vars.outputs.sha }}
 
-      - name: Image digest
-        run: |
-          echo "Backend Image: ${{ env.DOCKER_USERNAME }}/backend-express:latest"
-          echo "Backend SHA: ${{ env.DOCKER_USERNAME }}/backend-express:${{ github.sha }}"
-          echo "Frontend Image: ${{ env.DOCKER_USERNAME }}/frontend-vite:latest"
-          echo "Frontend SHA: ${{ env.DOCKER_USERNAME }}/frontend-vite:${{ github.sha }}"
-          echo "sha=${{ github.sha }}" >> $GITHUB_OUTPUT
-        id: build
-
-  # Trigger Kubernetes update via webhook
-  trigger-k8s-update:
+  deploy:
     runs-on: ubuntu-latest
     needs: build-and-push
     
     steps:
-      - name: Trigger Local Kubernetes Update
+      - name: Checkout code
+        uses: actions/checkout@v4
+        
+      - name: Install kubectl
+        uses: azure/setup-kubectl@v3
+        
+      - name: Set up Kubeconfig
         run: |
-          echo "✅ Images pushed to Docker Hub!"
-          echo "Backend: royjannessimbolon/backend-express:${{ github.sha }}"
-          echo "Frontend: royjannessimbolon/frontend-vite:${{ github.sha }}"
-          echo ""
-          echo "📝 Manual update command (run locally):"
-          echo "kubectl set image deployment/backend-deployment backend=royjannessimbolon/backend-express:${{ github.sha }} -n supply-chain-app"
-          echo "kubectl set image deployment/frontend-deployment frontend=royjannessimbolon/frontend-vite:${{ github.sha }} -n supply-chain-app"
+          mkdir -p $HOME/.kube
+          echo "${{ secrets.KUBECONFIG }}" | base64 -d > $HOME/.kube/config
+          chmod 600 $HOME/.kube/config
+      
+      - name: Update Kubernetes Deployments
+        run: |
+          kubectl set image deployment/backend-deployment \
+            backend=${{ env.DOCKER_USERNAME }}/backend-express:${{ needs.build-and-push.outputs.sha }} \
+            -n supply-chain-app
+          
+          kubectl set image deployment/frontend-deployment \
+            frontend=${{ env.DOCKER_USERNAME }}/frontend-vite:${{ needs.build-and-push.outputs.sha }} \
+            -n supply-chain-app
+      
+      - name: Verify Rollout
+        run: |
+          kubectl rollout status deployment/backend-deployment -n supply-chain-app
+          kubectl rollout status deployment/frontend-deployment -n supply-chain-app
