--- a/.github/workflows/k8s-cicd.yml
+++ b/.github/workflows/k8s-cicd.yml
@@ -62,13 +62,13 @@ jobs:
       - name: Install kubectl
         uses: azure/setup-kubectl@v3
         
-      - name: Set up Kubeconfig
+      - name: Configure kubeconfig
         run: |
           mkdir -p $HOME/.kube
           echo "${{ secrets.KUBECONFIG }}" | base64 -d > $HOME/.kube/config
           chmod 600 $HOME/.kube/config
       
-      - name: Update Kubernetes Deployments
+      - name: Update Images on Kubernetes
         run: |
           kubectl set image deployment/backend-deployment \
             backend=${{ env.DOCKER_USERNAME }}/backend-express:${{ needs.build-and-push.outputs.sha }} \
