--- a/.github/workflows/k8s-cicd.yml
+++ b/.github/workflows/k8s-cicd.yml
@@ -52,74 +52,56 @@ jobs:
             ${{ env.DOCKER_USERNAME }}/frontend-vite:${{ steps.vars.outputs.sha }}
 
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted  # ⭐ PENTING: Gunakan self-hosted runner
     needs: build-and-push
     
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        
-      - name: Install kubectl
-        uses: azure/setup-kubectl@v3
-        with:
-          version: 'v1.28.0'
-        
-      - name: Configure kubeconfig
-        run: |
-          mkdir -p $HOME/.kube
-          echo "${{ secrets.KUBECONFIG }}" | base64 -d > $HOME/.kube/config
-          chmod 600 $HOME/.kube/config
-          
+      
       - name: Verify Kubernetes Connection
         run: |
-          echo "Testing Kubernetes connection..."
           kubectl cluster-info
           kubectl get nodes
-          echo "Connection successful!"
+        shell: powershell
       
       - name: Create Namespace if not exists
-        run: |
-          kubectl apply -f k8s/namespace.yaml
+        run: kubectl apply -f k8s/namespace.yaml
+        shell: powershell
           
       - name: Apply Secrets
-        run: |
-          kubectl apply -f k8s/secrets.yaml
+        run: kubectl apply -f k8s/secrets.yaml
+        shell: powershell
       
-      - name: Deploy or Update Backend
+      - name: Deploy Backend
         run: |
           kubectl apply -f k8s/backend-deployment.yaml
           kubectl apply -f k8s/backend-service.yaml
-          kubectl set image deployment/backend-deployment \
-            backend=${{ env.DOCKER_USERNAME }}/backend-express:${{ needs.build-and-push.outputs.sha }} \
-            -n supply-chain-app
+          kubectl set image deployment/backend-deployment backend=${{ env.DOCKER_USERNAME }}/backend-express:${{ needs.build-and-push.outputs.sha }} -n supply-chain-app
+        shell: powershell
           
-      - name: Deploy or Update Frontend
+      - name: Deploy Frontend
         run: |
           kubectl apply -f k8s/frontend-deployment.yaml
           kubectl apply -f k8s/frontend-service.yaml
-          kubectl set image deployment/frontend-deployment \
-            frontend=${{ env.DOCKER_USERNAME }}/frontend-vite:${{ needs.build-and-push.outputs.sha }} \
-            -n supply-chain-app
+          kubectl set image deployment/frontend-deployment frontend=${{ env.DOCKER_USERNAME }}/frontend-vite:${{ needs.build-and-push.outputs.sha }} -n supply-chain-app
+        shell: powershell
       
       - name: Apply HPA
-        run: |
-          kubectl apply -f k8s/hpa.yaml
+        run: kubectl apply -f k8s/hpa.yaml
+        shell: powershell
       
       - name: Verify Rollout
         run: |
-          echo "Waiting for backend deployment..."
           kubectl rollout status deployment/backend-deployment -n supply-chain-app --timeout=5m
-          
-          echo "Waiting for frontend deployment..."
           kubectl rollout status deployment/frontend-deployment -n supply-chain-app --timeout=5m
+        shell: powershell
           
       - name: Show Deployment Status
+        if: always()
         run: |
-          echo "=== Pods Status ==="
+          Write-Host "=== Pods ==="
           kubectl get pods -n supply-chain-app
-          
-          echo "=== Services ==="
+          Write-Host "`n=== Services ==="
           kubectl get svc -n supply-chain-app
-          
-          echo "=== Deployments ==="
-          kubectl get deployments -n supply-chain-app
+        shell: powershell
